feat(student): implemented student crud
