# src/main/java/com/fyugp/fyugp_attendance_api/models/student/Student.java
@@ -2,26 +2,34 @@ package com.fyugp.fyugp_attendance_api.models.student;
 
 
 import com.fyugp.fyugp_attendance_api.models.BaseEntity;
+import com.fyugp.fyugp_attendance_api.models.department.Department;
+import com.fyugp.fyugp_attendance_api.utils.annotations.Searchable;
 import jakarta.persistence.*;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
+import lombok.*;
 
 @Getter
 @Setter
 @NoArgsConstructor
 @Entity
 @Table(name = "student")
+@Builder
+@AllArgsConstructor
 public class Student extends BaseEntity {
 
     @Column()
+    @Searchable
     private String name;
 
     @Column()
-    private String rollNumber;
+    @Searchable
+    private String registrationNumber;
 
     @ManyToOne()
     @JoinColumn(name = "student_batch_id", referencedColumnName = "id")
     private StudentBatch studentBatch;
+
+    @ManyToOne()
+    @JoinColumn(name = "department_id", referencedColumnName = "id")
+    private Department department;
 
 }
